# mpp_solver

./: CMakeLists.txt  LICENSE
include/: symbols.h
include/gui/: mainwindow.h  systemModel.h
include/helpers/: converter.h  plotter.h
include/iface/: converter.h  engine.h  iface.h  plotter.h  system.h
include/mpp/: engine.h  systemModel.h
src/: symbols.cpp
src/gui/: mainwindow.cpp  mainwindow.ui  systemModel.cpp
src/helpers/: converter.cpp  plotter.cpp
src/mpp/: engine.cpp  systemModel.cpp
tests/: CMakeLists.txt  converterTests.cpp  engineTests.cpp  plotterTests.cpp
